# tree

./: .clang-format  .gitignore  CMakeLists.txt
doc/: parser.xmi
scripts/python/: build.py  clean.py  run.py  test.py
src/: BinaryGenerator.cpp  BinaryGenerator.hpp  CMakeLists.txt  EToken.cpp  EToken.hpp  IRGenerator.cpp  IRGenerator.hpp  KeyWords.cpp  KeyWords.hpp  Logging.cpp  Logging.hpp  Operators.cpp  Operators.hpp  Parser.cpp  Parser.hpp  StreamParser.cpp  StreamParser.hpp  main.cpp
src/AST/: BinaryExpression.cpp  BinaryExpression.hpp  Boolean.cpp  Boolean.hpp  CMakeLists.txt  Error.cpp  Error.hpp  FunctionCall.cpp  FunctionCall.hpp  FunctionDefinition.cpp  FunctionDefinition.hpp  FunctionPrototype.cpp  FunctionPrototype.hpp  Node.cpp  Number.cpp  Number.hpp  Return.cpp  Return.hpp  Type.cpp  Type.hpp  VariableCall.cpp  VariableCall.hpp  VariableDeclaration.cpp  VariableDeclaration.hpp
src/ast/: BinaryExpression.cpp  BinaryExpression.hpp  Boolean.cpp  Boolean.hpp  CMakeLists.txt  CodeBlock.cpp  CodeBlock.hpp  ConditionalStatementIf.cpp  ConditionalStatementIf.hpp  CycleWhile.cpp  CycleWhile.hpp  FunctionCall.cpp  FunctionCall.hpp  FunctionDefinition.cpp  FunctionDefinition.hpp  Node.hpp  Number.cpp  Number.hpp  Return.cpp  Return.hpp  VariableCall.cpp  VariableCall.hpp  VariableDeclaration.cpp  VariableDeclaration.hpp
test/: CMakeLists.txt  test.cpp
