set(GTEST_INCLUDE_DIR ${GTEST_ROOT}/googletest/include)
set(GTEST_LIB_DIR ${GTEST_ROOT}/build/lib)
set(GTEST_BIN_DIR ${GTEST_ROOT}/build/bin)
set(GTEST_LIB_NAME gtestd)
set(GTEST_MAIN_LIB_NAME gtest_maind)


add_executable(test 
    test.cpp
)

target_include_directories(test 
    PRIVATE ${GTEST_INCLUDE_DIR}
)

target_link_libraries(test
    ${GTEST_LIB_DIR}/${GTEST_LIB_NAME}${CMAKE_STATIC_LIBRARY_SUFFIX}
    ${GTEST_LIB_DIR}/${GTEST_MAIN_LIB_NAME}${CMAKE_STATIC_LIBRARY_SUFFIX}
)

configure_file(${GTEST_BIN_DIR}/${GTEST_LIB_NAME}${CMAKE_SHARED_LIBRARY_SUFFIX} ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/${GTEST_LIB_NAME}${CMAKE_SHARED_LIBRARY_SUFFIX} COPYONLY)
configure_file(${GTEST_BIN_DIR}/${GTEST_MAIN_LIB_NAME}${CMAKE_SHARED_LIBRARY_SUFFIX} ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/${GTEST_MAIN_LIB_NAME}${CMAKE_SHARED_LIBRARY_SUFFIX} COPYONLY)
